--- a/contact.html
+++ b/contact.html
@@ -51,19 +51,19 @@
     <form>
       <div>
         <i class="fa-solid fa-envelope"></i>
-       </div>
+      </div>
       <input type="text" placeholder="Name (required)" required>
       <input type="text" placeholder="Return address (required)" required>
       <input type="text" placeholder="Topic (required)" required>
       <textarea placeholder="Subject (required)" required></textarea>
       <input type="submit" value="Send">
     </form>
-      
-      <br></br> <br></br> <br></br> <br></br> <br></br> <br></br> <br></br>
-      <br></br> <br></br>
+
+    <br></br> <br></br> <br></br> <br></br> <br></br> <br></br> <br></br>
+    <br></br> <br></br>
 
 
-    </div>
+  </div>
 
 
   </div>
@@ -88,19 +88,19 @@
       &nbsp;
     </div>
 
-    <a href="https://www.linkedin.com/in/edaakaltun/">
+    <a href="https://www.linkedin.com/in/edaakaltun/" target="_blank">
       <i class="fa-brands fa-linkedin-in"></i>
     </a>
 
-    <a href="https://github.com/EdaAkaltun">
+    <a href="https://github.com/EdaAkaltun" target="_blank">
       <i class="fa-brands fa-github"></i>
     </a>
 
-    <a href="https://www.flickr.com/people/142242166@N08/">
+    <a href="https://www.flickr.com/people/142242166@N08/" target="_blank">
       <i class="fa-brands fa-flickr"></i>
     </a>
 
-    <a href="https://www.behance.net/edaakaltun">
+    <a href="https://www.behance.net/edaakaltun" target="_blank">
       <i class="fa-brands fa-behance"></i>
     </a>
 
