--- a/experience.html
+++ b/experience.html
@@ -48,18 +48,18 @@
 
             <div class="textbox">
                 <img class="textbox_image_logos"
-                    src="https://media-exp1.licdn.com/dms/image/C4D0BAQF_Rq9KWS9bkw/company-logo_200_200/0/1558962640765?e=1654732800&v=beta&t=Tp4AJzC2btZzQ1BSf0ljNTLk6MaIVaeGxbPFNhVrdco">
-     
-                    <h2>HFB</h2>
-                    <p>Graduation intership
-                        BENG 1 in the conceptual phase · (January 2020 - July 2020, 7 months)
-                        <br></br>
-                        Revit modeler
-                        Existing buildings and new buildings · (January 2019 - January 2020, 1 year 1 month)
+                    src="https://media-exp2.licdn.com/dms/image/C4D0BAQF_Rq9KWS9bkw/company-logo_100_100/0/1558962640765?e=1663200000&v=beta&t=pOsbiKBnyunXsbHdB4zfPWePHJPFc2W7CF80BGDOcws">
 
-                        <br></br>
-                        Internship
-                        BIM · (August 2018 - January 2019, 6 months)</p>
+                <h2>HFB</h2>
+                <p>Graduation intership
+                    BENG 1 in the conceptual phase · (January 2020 - July 2020, 7 months)
+                    <br></br>
+                    Revit modeler
+                    Existing buildings and new buildings · (January 2019 - January 2020, 1 year 1 month)
+
+                    <br></br>
+                    Internship
+                    BIM · (August 2018 - January 2019, 6 months)</p>
 
             </div>
 
@@ -72,24 +72,24 @@
 
             <div class="textbox">
                 <img class="textbox_image_logos"
-                    src="https://uploads-ssl.webflow.com/5e386dd2c442ab264149e27a/5e661f8f68556a133c417e39_SUM%20Icon.png">
+                    src="https://media-exp2.licdn.com/dms/image/C560BAQET0K5rzKHysg/company-logo_100_100/0/1571572791610?e=1663200000&v=beta&t=S0l9KJPKguNQRbvl6AgTyQ0hpFyDg4cvafyz8bsR19s">
 
-                    <h2>SUM - Symbiotic Urban Movement</h2>
-                    <p>Climate Systems Engineer
-                        SUM · (June 2021 - Present)</p>
+                <h2>SUM - Symbiotic Urban Movement</h2>
+                <p>Climate Systems Engineer
+                    SUM · (June 2021 - Present)</p>
 
             </div>
 
             <div class="textbox">
                 <img class="textbox_image_logos"
-                    src="https://media-exp1.licdn.com/dms/image/C560BAQEeGh4rcCCKIQ/company-logo_200_200/0/1578569010719?e=1654128000&v=beta&t=8FXJ3rbxpEUW6OPdscLextxNwMsU1uC3Yr8MdLxx9NA">
+                    src="https://media-exp2.licdn.com/dms/image/C560BAQEeGh4rcCCKIQ/company-logo_100_100/0/1578569010719?e=1663200000&v=beta&t=rH-Ea8T9ooC4jYLrK3hUil31ZVnnvuFiIx8nL1td6u8">
 
-                    <h2>TU Delft Faculty of Architecture and the Built Environment</h2>
-                    <p>Student Council member 2022/2023
-                        <br></br>
-                        Student mentor
-                        Aug 2021 - Feb 2022 · 7 mos
-                    </p>
+                <h2>TU Delft Faculty of Architecture and the Built Environment</h2>
+                <p>Student Council member 2022/2023
+                    <br></br>
+                    Student mentor
+                    Aug 2021 - Feb 2022 · 7 mos
+                </p>
 
             </div>
             <br></br><br></br><br></br><br></br><br></br><br></br><br></br>
@@ -101,21 +101,22 @@
                 &nbsp;
             </div>
 
-            <a href="https://www.linkedin.com/in/edaakaltun/">
+            <a href="https://www.linkedin.com/in/edaakaltun/" target="_blank">
                 <i class="fa-brands fa-linkedin-in"></i>
             </a>
 
-            <a href="https://github.com/EdaAkaltun">
+            <a href="https://github.com/EdaAkaltun" target="_blank">
                 <i class="fa-brands fa-github"></i>
             </a>
 
-            <a href="https://www.flickr.com/people/142242166@N08/">
+            <a href="https://www.flickr.com/people/142242166@N08/" target="_blank">
                 <i class="fa-brands fa-flickr"></i>
             </a>
 
-            <a href="https://www.behance.net/edaakaltun">
+            <a href="https://www.behance.net/edaakaltun" target="_blank">
                 <i class="fa-brands fa-behance"></i>
             </a>
+
 
         </div>
 
