--- a/index.html
+++ b/index.html
@@ -1,81 +1,81 @@
 <html>
 
 <head>
-    <title>Portfolio website - Eda Akaltun</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style_main.css">
-    <link rel="stylesheet" href="loading.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <title>Portfolio website - Eda Akaltun</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style_main.css">
+  <link rel="stylesheet" href="loading.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
 <body>
 
-    <div class="background">
+  <div class="background">
 
-        <div class="nav-container">
-            <nav class="navbar">
-                <a href="index.html"> <img src="images/logo.png" alt="logo image" id="navbar-logo"> </a>
-                <div class="menu-toggle" id="mobile-menu">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
-                <ul class="nav-menu">
-                    <li><a href="index.html" class="nav-links">HOME</a></li>
-                    <li><a href="aboutme.html" class="nav-links">ABOUT ME</a></li>
-                    <li><a href="education.html" class="nav-links">EDUCATION</a></li>
-                    <li><a href="experience.html" class="nav-links">EXPERIENCE</a></li>
-                    <li><a href="projects.html" class="nav-links">PROJECTS</a></li>
-                    <li><a href="skills.html" class="nav-links">SKILLS</a></li>
-                    <li><a href="contact.html" class="nav-links">CONTACT</a></li>
-                </ul>
-                <!-- <i class="fa-solid fa-moon fa-bounce fa-2xl " id="icondark" style="--fa-animation-iteration-count: 5;" ></i> -->
-                <img src="images/moon.png" id="icondark">
-            </nav>
-            <div class="inf_line">
-                &nbsp;
-            </div>
+    <div class="nav-container">
+      <nav class="navbar">
+        <a href="index.html"> <img src="images/logo.png" alt="logo image" id="navbar-logo"> </a>
+        <div class="menu-toggle" id="mobile-menu">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
         </div>
-        <script src="navbar.js"></script>
+        <ul class="nav-menu">
+          <li><a href="index.html" class="nav-links">HOME</a></li>
+          <li><a href="aboutme.html" class="nav-links">ABOUT ME</a></li>
+          <li><a href="education.html" class="nav-links">EDUCATION</a></li>
+          <li><a href="experience.html" class="nav-links">EXPERIENCE</a></li>
+          <li><a href="projects.html" class="nav-links">PROJECTS</a></li>
+          <li><a href="skills.html" class="nav-links">SKILLS</a></li>
+          <li><a href="contact.html" class="nav-links">CONTACT</a></li>
+        </ul>
+        <!-- <i class="fa-solid fa-moon fa-bounce fa-2xl " id="icondark" style="--fa-animation-iteration-count: 5;" ></i> -->
+        <img src="images/moon.png" id="icondark">
+      </nav>
+      <div class="inf_line">
+        &nbsp;
+      </div>
+    </div>
+    <script src="navbar.js"></script>
 
 
 
-        <div class="overflowcontainer_nonhome">
+    <div class="overflowcontainer_nonhome">
 
-            <div class="overflowcentered">
-                <div class="overflowcontainer_home"> <img id="zindex0" src="images\indexmap\background.png">
-                    <a href="aboutme.html"> <img class="overflowcontainer_home_AboutMe shadowfilter"
-                            src="images\indexmap\aboutme.png"> </a>
-                    <a href="education.html"> <img class="overflowcontainer_home_Education shadowfilter"
-                            src="images\indexmap\education.png"></a>
-                    <a href="experience.html"> <img class="overflowcontainer_home_Experience shadowfilter"
-                            src="images\indexmap\experience.png"></a>
-                    <a href="projects.html"> <img class="overflowcontainer_home_Projects shadowfilter"
-                            src="images\indexmap\projects.png"></a>
-                    <a href="skills.html"> <img class="overflowcontainer_home_Skills shadowfilter"
-                            src="images\indexmap\skills.png"></a>
-                </div>
-
-                <div class="Modal" id="Modal_gone">
-                    <div class="triangle"></div>
-                <div class="cross" onclick="document.getElementById('Modal_gone').style.display='none'"> x </div>
-                    <p class="Modal-InText">
-                        Click me!
-                    </p>
-                </div>
-                
-
-            </div>
-
-
+      <div class="overflowcentered">
+        <div class="overflowcontainer_home"> <img id="zindex0" src="images\indexmap\background.png">
+          <a href="aboutme.html"> <img class="overflowcontainer_home_AboutMe shadowfilter"
+              src="images\indexmap\aboutme.png"> </a>
+          <a href="education.html"> <img class="overflowcontainer_home_Education shadowfilter"
+              src="images\indexmap\education.png"></a>
+          <a href="experience.html"> <img class="overflowcontainer_home_Experience shadowfilter"
+              src="images\indexmap\experience.png"></a>
+          <a href="projects.html"> <img class="overflowcontainer_home_Projects shadowfilter"
+              src="images\indexmap\projects.png"></a>
+          <a href="skills.html"> <img class="overflowcontainer_home_Skills shadowfilter"
+              src="images\indexmap\skills.png"></a>
         </div>
 
-        <img class="scroll_down_arrow" id="scroll_down_arrow" src="images/scroll-down.gif" alt="scroll down"></img>
-        <img class="scroll_down_arrow" id="scroll_down_arrow_flip" src="images/scroll-down.gif" alt="scroll down"></img>
+        <div class="Modal" id="Modal_gone">
+          <div class="triangle"></div>
+          <div class="cross" onclick="document.getElementById('Modal_gone').style.display='none'"> x </div>
+          <p class="Modal-InText">
+            Click me!
+          </p>
+        </div>
 
 
-        <!-- <script src="jquery-3.6.0.min.js"></script>
+      </div>
+
+
+    </div>
+
+    <img class="scroll_down_arrow" id="scroll_down_arrow" src="images/scroll-down.gif" alt="scroll down"></img>
+    <img class="scroll_down_arrow" id="scroll_down_arrow_flip" src="images/scroll-down.gif" alt="scroll down"></img>
+
+
+    <!-- <script src="jquery-3.6.0.min.js"></script>
         <script>
           $(document).ready(function(){
             function arrowshow(){
@@ -100,7 +100,7 @@
           });
         </script> -->
 
-        <!-- <div class="overflowcontainer_home"> <img src="images\indexmap\126371014 copy.png"> </img>
+    <!-- <div class="overflowcontainer_home"> <img src="images\indexmap\126371014 copy.png"> </img>
     <img class="overflowcontainer_home_AboutMe shadowfilter" src="images\indexmap\about me copy.png" id="img_about">
     <img class="overflowcontainer_home_Education shadowfilter" src="images\indexmap\education copy.png" id="img_education">
     <img class="overflowcontainer_home_Experience shadowfilter" src="images\indexmap\experience copy.png" id="img_experience">
@@ -108,38 +108,39 @@
     <img class="overflowcontainer_home_Skills shadowfilter" src="images\indexmap\skills copy.png" id="img_skills">
 </div> -->
 
-        <div class="social-links footerweb">
-            <div class="inf_line">
-                &nbsp;
-            </div>
+    <div class="social-links footerweb">
+      <div class="inf_line">
+        &nbsp;
+      </div>
 
-            <a href="https://www.linkedin.com/in/edaakaltun/">
-                <i class="fa-brands fa-linkedin-in"></i>
-            </a>
+      <a href="https://www.linkedin.com/in/edaakaltun/" target="_blank">
+        <i class="fa-brands fa-linkedin-in"></i>
+      </a>
 
-            <a href="https://github.com/EdaAkaltun">
-                <i class="fa-brands fa-github"></i>
-            </a>
+      <a href="https://github.com/EdaAkaltun" target="_blank">
+        <i class="fa-brands fa-github"></i>
+      </a>
 
-            <a href="https://www.flickr.com/people/142242166@N08/">
-                <i class="fa-brands fa-flickr"></i>
-            </a>
+      <a href="https://www.flickr.com/people/142242166@N08/" target="_blank">
+        <i class="fa-brands fa-flickr"></i>
+      </a>
 
-            <a href="https://www.behance.net/edaakaltun">
-                <i class="fa-brands fa-behance"></i>
-            </a>
+      <a href="https://www.behance.net/edaakaltun" target="_blank">
+        <i class="fa-brands fa-behance"></i>
+      </a>
 
-        </div>
 
-        <script src="darkmode.js"></script>
-
-        <script src="darkmodemap.js"></script>
     </div>
 
+    <script src="darkmode.js"></script>
+
+    <script src="darkmodemap.js"></script>
+  </div>
 
 
 
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
         $(document).ready(function () {
             $(window).resize(function () {
