--- a/projects.html
+++ b/projects.html
@@ -58,31 +58,38 @@
       <!-- <input type="radio" name="filter" id="Graphic"><label for="Graphic">Design</label> -->
       <div class="gallery">
         <figure class="card Architecture">
-          <a href="projects_stuctural.html"> <img class="card__image" loading="lazy" src="images\projecten\Structural\6.png" height="250px" alt=""> </a>
+          <a href="projects_stuctural.html"> <img class="card__image" loading="lazy"
+              src="images\projecten\Structural\6.png" height="250px" alt=""> </a>
           <figcaption class="card__caption">Structural Design - Glass</figcaption>
         </figure>
         <figure class="card Architecture">
-          <a href="https://www.delftsolardecathlon.com/"> <img class="card__image" loading="lazy" src="images\projecten\SUM\test6_exterior_1.jpg" height="250px" alt=""> </a>
-          <figcaption class="card__caption">SUM</figcaption>
+          <a href="https://www.delftsolardecathlon.com/" target="_blank"> <img class="card__image" loading="lazy"
+              src="images\projecten\SUM\test6_exterior_1.jpg" height="250px" alt=""> </a>
+          <figcaption class="card__caption">SUM - Solar Decathlon competition</figcaption>
         </figure>
         <figure class="card Code">
-          <a href="https://edaakaltun.github.io/project_apidae/"> <img class="card__image" loading="lazy" src="images\projecten\apidae\3.4_lattice_gym.png" height="250px" alt=""> </a>
+          <a href="https://edaakaltun.github.io/project_apidae/" target="_blank"> <img class="card__image"
+              loading="lazy" src="images\projecten\apidae\3.4_lattice_gym.png" height="250px" alt=""> </a>
           <figcaption class="card__caption">Project Apidae</figcaption>
         </figure>
         <figure class="card Code">
-          <a href="index.html"> <img class="card__image" loading="lazy" src="images\indexmap\background copy.png" height="250px" alt=""> </a>
+          <a href="index.html"> <img class="card__image" loading="lazy" src="images\indexmap\background copy.png"
+              height="250px" alt=""> </a>
           <figcaption class="card__caption">CSS Portfolio</figcaption>
         </figure>
         <figure class="card Architecture">
-          <a href="projects_zero.html"> <img class="card__image" loading="lazy" src="images\projecten\Zero\situation2.png" height="250px" alt=""> </a>
+          <a href="projects_zero.html"> <img class="card__image" loading="lazy"
+              src="images\projecten\Zero\situation2.png" height="250px" alt=""> </a>
           <figcaption class="card__caption">ZERO Energy</figcaption>
         </figure>
         <figure class="card Product">
-          <img class="card__image" loading="lazy" src="images\projecten\Bucky\render_buckyfacade.png" height="250px" alt="">
+          <a href="projects_bucky.html"> <img class="card__image" loading="lazy"
+              src="images\projecten\Bucky\render_buckyfacade.png" height="250px" alt=""></a>
           <figcaption class="card__caption">BUCKY LAB</figcaption>
         </figure>
         <figure class="card Architecture">
-          <img class="card__image" loading="lazy" src="images\projecten\ON6\render.png" height="250px" alt="">
+          <a href="projects_on6.html"> <img class="card__image" loading="lazy" src="images\projecten\ON6\render.png"
+              height="250px" alt=""></a>
           <figcaption class="card__caption">ON6</figcaption>
         </figure>
         <!-- <figure class="card Code">
@@ -92,11 +99,12 @@
         <figure class="card Code">
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
           <figcaption class="card__caption">Parshade script</figcaption>
-        </figure>
+        </figure>-->
         <figure class="card Architecture">
-          <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
-          <figcaption class="card__caption">Extreme</figcaption>
-        </figure> -->
+          <a href="projects_extreme.html"> <img class="card__image" loading="lazy"
+              src="images\projecten\extreme\x_1 - Photo.jpg" height="250px" alt=""></a>
+          <figcaption class="card__caption">EXTREME Technology</figcaption>
+        </figure>
 
         <!-- <figure class="card Graphic">
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
@@ -135,19 +143,19 @@
       &nbsp;
     </div>
 
-    <a href="https://www.linkedin.com/in/edaakaltun/">
+    <a href="https://www.linkedin.com/in/edaakaltun/" target="_blank">
       <i class="fa-brands fa-linkedin-in"></i>
     </a>
 
-    <a href="https://github.com/EdaAkaltun">
+    <a href="https://github.com/EdaAkaltun" target="_blank">
       <i class="fa-brands fa-github"></i>
     </a>
 
-    <a href="https://www.flickr.com/people/142242166@N08/">
+    <a href="https://www.flickr.com/people/142242166@N08/" target="_blank">
       <i class="fa-brands fa-flickr"></i>
     </a>
 
-    <a href="https://www.behance.net/edaakaltun">
+    <a href="https://www.behance.net/edaakaltun" target="_blank">
       <i class="fa-brands fa-behance"></i>
     </a>
 
