--- a/skills.html
+++ b/skills.html
@@ -61,8 +61,8 @@
       <input type="radio" name="filter" id="Etc"><label for="Etc">Other</label>
       <div class="gallery">
         <figure class="card Language">
-         <img class="card__image" loading="lazy" src="images\skills\Dutch.png" height="150px" alt="">
-          <figcaption class="card__caption">Dutch - Native 
+          <img class="card__image" loading="lazy" src="images\skills\Dutch.png" height="150px" alt="">
+          <figcaption class="card__caption">Dutch - Native
             <br></br>
             <i class="fa-solid fa-star fa-xs"></i>
             <i class="fa-solid fa-star fa-xs"></i>
@@ -73,7 +73,7 @@
         </figure>
         <figure class="card Language">
           <img class="card__image" loading="lazy" src="images\skills\English.jpg" height="150px" alt="">
-          <figcaption class="card__caption">English - C2   
+          <figcaption class="card__caption">English - C2
             <br></br>
             <i class="fa-solid fa-star fa-xs"></i>
             <i class="fa-solid fa-star fa-xs"></i>
@@ -92,14 +92,14 @@
             <i class="fa-solid fa-star fa-xs"></i>
           </figcaption>
         </figure>
-        <figure class="card Language">
+        <!-- <figure class="card Language">
           <img class="card__image" loading="lazy" src="images\skills\x.png" height="150px" alt="">
           <figcaption class="card__caption">German - B1
             <br></br>
             <i class="fa-solid fa-star fa-xs"></i>
             <i class="fa-solid fa-star fa-xs"></i>
           </figcaption>
-        </figure>
+        </figure> -->
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Revit.png" height="150px" alt="">
           <figcaption class="card__caption">Revit
@@ -114,6 +114,7 @@
           <img class="card__image" loading="lazy" src="images\skills\Sketchup.png" height="150px" alt="">
           <figcaption class="card__caption">Sketchup
             <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
             <i class="fa-solid fa-star fa-xs"></i>
             <i class="fa-solid fa-star fa-xs"></i>
             <i class="fa-solid fa-star fa-xs"></i>
@@ -144,7 +145,7 @@
             <i class="fa-solid fa-star fa-xs"></i>
             <i class="fa-solid fa-star fa-xs"></i>
           </figcaption>
-          
+
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Enorm.jpg" height="150px" alt="">
@@ -203,99 +204,100 @@
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\GIMP.png" height="150px" alt="">
           <figcaption class="card__caption">GIMP
-          <br></br>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-        </figcaption>
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Edupack.jpg" height="150px" alt="">
           <figcaption class="card__caption">CES Edupack
-          <br></br>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-        </figcaption>
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\DesignBuilder.jpg" height="150px" alt="">
           <figcaption class="card__caption">Design Builder
-          <br></br>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-        </figcaption>
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Lumion.jpg" height="150px" alt="">
           <figcaption class="card__caption">Lumion
-          <br></br>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-        </figcaption>
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Enscape.png" height="150px" alt="">
           <figcaption class="card__caption">Enscape
-          <br></br>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-        </figcaption>
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Tiled.png" height="150px" alt="">
           <figcaption class="card__caption">Tiled
-          <br></br>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-        </figcaption>
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Coding">
           <img class="card__image" loading="lazy" src="images\skills\Python.png" height="150px" alt="">
           <figcaption class="card__caption">Python
-          <br></br>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-        </figcaption>
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Coding">
-          <img class="card__image" loading="lazy" src="" height="150px" alt="">
+          <img class="card__image" loading="lazy"
+            src="images\skills\141-1415523_responsive-web-design-with-html5-css3-html-and.jpg" height="150px" alt="">
           <figcaption class="card__caption">HTML & CSS
-          <br></br>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-        </figcaption>
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Coding">
           <img class="card__image" loading="lazy" src="images\skills\Markdown.png" height="150px" alt="">
           <figcaption class="card__caption">Markdown
-          <br></br>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-        </figcaption>
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Coding">
           <img class="card__image" loading="lazy" src="images\skills\Grasshopper.png" height="150px" alt="">
           <figcaption class="card__caption">Grasshopper
-          <br></br>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-          <i class="fa-solid fa-star fa-xs"></i>
-        </figcaption>
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
-        <figure class="card Etc">
+        <!-- <figure class="card Etc">
           <img class="card__image" loading="lazy" src="" height="150px" alt="">
           <figcaption class="card__caption">Graphic Design
           <br></br>
@@ -304,12 +306,17 @@
           <i class="fa-solid fa-star fa-xs"></i>
           <i class="fa-solid fa-star fa-xs"></i>
         </figcaption>
-        </figure>
+        </figure> -->
         <figure class="card Etc">
           <img class="card__image" loading="lazy" src="images\skills\BREEAM.png" height="150px" alt="">
-          <figcaption class="card__caption">BREEAM</figcaption>
+          <figcaption class="card__caption">BREEAM
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
+
         </figure>
-        <figure class="card Etc">
+        <!-- <figure class="card Etc">
           <img class="card__image" loading="lazy" src="" height="150px" alt="">
           <figcaption class="card__caption">Dutch Building Code</figcaption>
         </figure>
@@ -322,7 +329,7 @@
           <i class="fa-solid fa-star fa-xs"></i>
           <i class="fa-solid fa-star fa-xs"></i>
         </figcaption>
-        </figure>
+        </figure> -->
 
       </div>
       <br></br> <br></br> <br></br> <br></br> <br></br> <br></br> <br></br>
@@ -353,19 +360,19 @@
       &nbsp;
     </div>
 
-    <a href="https://www.linkedin.com/in/edaakaltun/">
+    <a href="https://www.linkedin.com/in/edaakaltun/" target="_blank">
       <i class="fa-brands fa-linkedin-in"></i>
     </a>
 
-    <a href="https://github.com/EdaAkaltun">
+    <a href="https://github.com/EdaAkaltun" target="_blank">
       <i class="fa-brands fa-github"></i>
     </a>
 
-    <a href="https://www.flickr.com/people/142242166@N08/">
+    <a href="https://www.flickr.com/people/142242166@N08/" target="_blank">
       <i class="fa-brands fa-flickr"></i>
     </a>
 
-    <a href="https://www.behance.net/edaakaltun">
+    <a href="https://www.behance.net/edaakaltun" target="_blank">
       <i class="fa-brands fa-behance"></i>
     </a>
 
