--- a/projects_extreme.html
+++ b/projects_extreme.html
@@ -57,13 +57,13 @@
 
 
       <div class="grid__item">
-        <img src="images\projecten\extreme\x_1 - Photo.jpg" - Photo.jpg id="frontimg">
+        <img src="images\projecten\extreme\x.png" - Photo.jpg id="frontimg">
         <div class="image-description">
-          <span class="image-description__title">Observatory</span>
+          <span class="image-description__title">Refugee Camp School</span>
           <div class="image-description__details">
             Software<br><strong>Lumion render</strong><br>
             <hr class="divider">
-            Members<br><strong>Group Assignment</strong><br>
+            Members<br><strong>Individual Assignment</strong><br>
             <hr class="divider">
             Details<br><strong>Final Render</strong><br>
             <hr class="divider">
@@ -83,37 +83,37 @@
           <b>
             <p>Name</p>
           </b>
-          <p>Lorem ipsum dolor sit amet</p>
+          <p>EXTREME Technology CARE Azraq refugee camp</p>
 
           <b> <br></br>
             <p>Details</p>
           </b>
-          <p> Lorem ipsum dolor sit amet</p>
+          <p> 15 ECTS MSc elective of the Faculty of Architecture</p>
 
           <b> <br></br>
             <p>Client</p>
           </b>
-          <p>Lorem ipsum dolor sit amet</p>
+          <p>Schoolwork: TU Delft</p>
 
           <b> <br></br>
             <p>Date</p>
           </b>
-          <p>Lorem ipsum dolor sit amet</p>
+          <p>June 2022</p>
 
           <b> <br></br>
             <p>Size</p>
           </b>
-          <p>Lorem ipsum dolor sit amet</p>
+          <p>200m2+</p>
 
           <b> <br></br>
             <p>Team</p>
           </b>
-          <p>Lorem ipsum dolor sit amet</p>
+          <p>Individual</p>
 
           <b> <br></br>
             <p>Supervisor</p>
           </b>
-          <p>Lorem ipsum dolor sit amet</p>
+          <p>Annemiek </p>
           <br></br>
 
         </article>
@@ -123,34 +123,15 @@
             <p>Project Description</p>
           </b>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Odio tempor orci dapibus ultrices in. Sed risus ultricies tristique nulla aliquet enim
-            tortor at. Malesuada fames ac turpis egestas sed tempus urna et. Aliquet lectus proin nibh nisl condimentum
-            id venenatis a. Amet luctus venenatis lectus magna. Massa tincidunt dui ut ornare lectus sit amet. At
-            elementum eu facilisis sed odio morbi. Convallis tellus id interdum velit. Varius morbi enim nunc faucibus.
-            Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam.
+            EXTREME Architecture and EXTREME Technology are courses in the master track of the faculty of Architecture and the built environment of the Technical University in Delft, The Netherlands.
+EXTREME deals with integral design in extreme environments. The goal of this approach is to make the students conscious of their technical and architectural design choices. 
 
           </p> <br></br>
           <p>
-            Amet nisl suscipit adipiscing bibendum est ultricies integer. Eu facilisis sed odio morbi quis. Viverra
-            ipsum nunc aliquet bibendum enim. Hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit
-            ullamcorper. Sed enim ut sem viverra aliquet eget sit amet tellus. Ultrices gravida dictum fusce ut placerat
-            orci nulla. Tortor pretium viverra suspendisse potenti nullam ac tortor. Lectus magna fringilla urna
-            porttitor rhoncus. At consectetur lorem donec massa sapien. Commodo viverra maecenas accumsan lacus vel
-            facilisis. Elit duis tristique sollicitudin nibh sit amet commodo. Viverra vitae congue eu consequat. Ut
-            diam quam nulla porttitor massa id neque. Tincidunt augue interdum velit euismod. Elit eget gravida cum
-            sociis natoque penatibus et magnis dis. Sed elementum tempus egestas sed sed risus pretium quam. Aliquam
-            malesuada bibendum arcu vitae elementum curabitur. Facilisi morbi tempus iaculis urna id. Convallis aenean
-            et tortor at risus viverra adipiscing.
+            The EXTREME Technology course was dedicated to designing a school for the Azraq refugee camp in Jordan. With help from CARE to get a better understanding of the local situation our students have looked into finding solutions for the extreme climate, limited resources and, of course, the social needs of the children.
           </p> <br></br>
           <p>
-            Euismod in pellentesque massa placerat duis ultricies. Tempus egestas sed sed risus pretium. Maecenas sed
-            enim ut sem. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non. Venenatis lectus magna
-            fringilla urna. Libero justo laoreet sit amet cursus. Elementum integer enim neque volutpat ac tincidunt.
-            Sem et tortor consequat id. Tortor condimentum lacinia quis vel eros donec ac. Eu nisl nunc mi ipsum
-            faucibus vitae. Dignissim cras tincidunt lobortis feugiat vivamus at. In vitae turpis massa sed elementum
-            tempus. Ultrices eros in cursus turpis massa tincidunt dui ut ornare. Elementum eu facilisis sed odio morbi
-            quis commodo. Etiam erat velit scelerisque in dictum non consectetur a.
+           
           </p> <br></br>
           <u> <a href="  " target="_blank">
               <p>Download PDF</p>
@@ -165,22 +146,22 @@
         <div class="container">
           <div class="box">
             <div class="imgBx">
-              <img src=x>
+              <img src="images\projecten\extreme\1_2 - Photo.png">
             </div>
           </div>
           <div class="box">
             <div class="imgBx">
-              <img src=x>
+              <img src="images\projecten\extreme\1_5 - Photo.png">
             </div>
           </div>
           <div class="box">
             <div class="imgBx">
-              <img src=x>
+              <img src="images\projecten\extreme\1_9 - Ph3oto.png">
             </div>
           </div>
           <div class="box">
             <div class="imgBx">
-              <img src=x>
+              <img src="images\projecten\extreme\alldetails.png">
             </div>
           </div>
         </div>
@@ -188,22 +169,22 @@
         <div class="container">
           <div class="box">
             <div class="imgBx">
-              <img src=x>
+              <img src="images\projecten\extreme\floorplan.png">
             </div>
           </div>
           <div class="box">
             <div class="imgBx">
-              <img src=x>
+              <img src="images\projecten\extreme\section2.png">
             </div>
           </div>
           <div class="box">
             <div class="imgBx">
-              <img src=x>
+              <img src="images\projecten\extreme\urban map.png">
             </div>
           </div>
           <div class="box">
             <div class="imgBx">
-              <img src=x>
+              <img src="images\projecten\extreme\x.png">
             </div>
           </div>
         </div>
