--- a/projects.html
+++ b/projects.html
@@ -60,17 +60,22 @@
         <figure class="card Architecture">
           <a href="projects_stuctural.html"> <img class="card__image" loading="lazy"
               src="images\projecten\Structural\6.png" height="250px" alt=""> </a>
-          <figcaption class="card__caption">Structural Design - Glass</figcaption>
+          <figcaption class="card__caption">Structural Design - Full Glass Observatory</figcaption>
         </figure>
         <figure class="card Architecture">
           <a href="https://www.delftsolardecathlon.com/" target="_blank"> <img class="card__image" loading="lazy"
               src="images\projecten\SUM\test6_exterior_1.jpg" height="250px" alt=""> </a>
-          <figcaption class="card__caption">SUM - Solar Decathlon competition</figcaption>
+          <figcaption class="card__caption">SUM - Solar Decathlon EU</figcaption>
         </figure>
         <figure class="card Code">
           <a href="https://edaakaltun.github.io/project_apidae/" target="_blank"> <img class="card__image"
               loading="lazy" src="images\projecten\apidae\3.4_lattice_gym.png" height="250px" alt=""> </a>
           <figcaption class="card__caption">Project Apidae</figcaption>
+        </figure>
+        <figure class="card Architecture">
+          <a href="projects_extreme.html"> <img class="card__image" loading="lazy"
+              src="images\projecten\extreme\x.png" height="250px" alt=""></a>
+          <figcaption class="card__caption">EXTREME Technology</figcaption>
         </figure>
         <figure class="card Code">
           <a href="index.html"> <img class="card__image" loading="lazy" src="images\indexmap\background copy.png"
@@ -100,11 +105,7 @@
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
           <figcaption class="card__caption">Parshade script</figcaption>
         </figure>-->
-        <figure class="card Architecture">
-          <a href="projects_extreme.html"> <img class="card__image" loading="lazy"
-              src="images\projecten\extreme\x_1 - Photo.jpg" height="250px" alt=""></a>
-          <figcaption class="card__caption">EXTREME Technology</figcaption>
-        </figure>
+
 
         <!-- <figure class="card Graphic">
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
